# digital_up_back

./: Dockerfile  config.py  db_connection.py  log.txt  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 1fbee0e1a481_2_migration.py  b85c3dc35736_test_after.py  dac08bfc52fb_1_migration.py
models/: models.py  schemas.py
routers/: router_film.py  router_genre.py  router_user.py
